<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C4E0F6"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/Name"
        android:layout_width="230dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="190dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/cases"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/cases" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"

        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/deaths"
        />

    <TextView
        android:id="@+id/recoveries"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/recoveries" />

</RelativeLayout>